vlib/v/checker/tests/inout/assign_expr_type_err_d.out
vlib/v/checker/tests/inout/assign_expr_type_err_d.v:5:7: error: operator += not defined on left type `Foo` and right type `Foo`
    3| fn main() {
    4|     mut a := Foo{ }
    5|     a += Foo{ }
                ~~~
    6| }
