vlib/v/checker/tests/inout/assign_expr_type_err_d.vv
struct Foo { }

fn main() {
	mut a := Foo{ }
	a += Foo{ }
}